@@ -2,6 +2,8 @@
 v2.0.10-git
 -----------
 
+[mms] Disable blacklist, vacation, and whitelist API methods if the preference
+      is locked.
 
 
 ------
